2004-05-09  Benjamin Otte  <otte@gnome.org>

	* libs/gst/bytestream/Makefile.am:
	  we should indeed add .c files to makefiles or they won't be built
	  (d'oh)

2004-05-08  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_proxy_fixate):
	  really reduce the set of caps

2004-05-08  Benjamin Otte  <otte@gnome.org>

	* tests/Makefile.am:
	* tests/spidey_bench.c: (handoff), (main):
	  add benchmark to test how long spider needs to create a pipeline

2004-05-08  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_set_active), (gst_pad_link_unnegotiate):
	  mark links as unengaged when unnegotiating instead of deactivating.
	  This way pads aren't marked as unengaged when going PLAYING=>PAUSED

2004-05-08  Benjamin Otte  <otte@gnome.org>

	* docs/manual/helloworld.xml:
	  s/audiosink/osssink (patch by Patrick Guimond)

2004-05-07  David Schleef  <ds@schleef.org>

	* configure.ac: Make sure GST_INT_CFLAGS is not clobbered,
	since it contains important stuff.

2004-05-07  David Schleef  <ds@schleef.org>

	* testsuite/caps/caps.c: (test3), (main): A check for appending
	ANY caps.

2004-05-07  David Schleef  <ds@schleef.org>

	* common/m4/as-compiler-flag.m4: Properly quote arguments,
	which may contain commas.  Fixes detection of -Wa,-mregnames

2004-05-06  David Schleef  <ds@schleef.org>

	Changes to handle compilers that don't have variadic macro
	support.  In particular, glib headers define some inlines
	that need G_LOG_DOMAIN defined.  Additional fixes for MSVC
	builds.
	* gst/Makefile.am:
	* gst/cothreads.c:
	* gst/elements/gstfdsink.c:
	* gst/elements/gstfdsrc.c:
	* gst/elements/gstfilesink.c:
	* gst/elements/gstfilesrc.c:
	* gst/gst_private.h:
	* gst/gstatomic.c:
	* gst/gstcaps.c: (gst_caps_append):
	* gst/gstcpu.c: (gst_cpuid_i386):
	* gst/gstelement.c:
	* gst/gsterror.c:
	* gst/gstfilter.c:
	* gst/gstinfo.h:
	* gst/gstprobe.c:
	* gst/gstquery.c:
	* gst/gstregistry.c:
	* gst/gststructure.c:
	* gst/gsttaginterface.c: