@@ -1,3 +1,7 @@
+2004-05-09  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* tests/Makefile.am: fix am16 issue
+
 2004-05-09  Benjamin Otte  <otte@gnome.org>
 
 	* libs/gst/bytestream/Makefile.am:
